Started Implementing Toolbar
Still need to add rest keyboard numbers to use the toolbar

--- a/New 3rd person test/Assembly-CSharp.csproj
+++ b/New 3rd person test/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Resources\Sprites\Items\Item.cs" />
     <Compile Include="Assets\Resources\Sprites\Items\ItemDatabase.cs" />
     <Compile Include="Assets\UI Scripts\ItemFollowMouse.cs" />
+    <Compile Include="Assets\UI Scripts\Toolbar.cs" />
     <Compile Include="Assets\UI Scripts\UIInventory.cs" />
     <Compile Include="Assets\UI Scripts\UIItem.cs" />
     <Compile Include="Assets\UI Scripts\UIItems.cs" />
